philly-311-citywide-meta/src/objects/Feedback__c.object
<CustomObject>
    <fields>
        <fullName>AssignedToMe__c</fullName>
        <formula>IF( Assigned_To__c  = $User.Id , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Status__c</fullName>
        <description>Fixed – Problem fixed.  Code is unit tested and checked in the code repository.
Won’t Fix – The problem is a bug but won’t be fixed.
Postponed – Problem will be fixed in another release.  Development should provide in the notes the target release that the problem will be fixed.
Invalid – The problem described in the feedback item is not a bug, is not reproducible or is a feature that does not make sense.
Duplicate – The feedback item is a duplicate of another feedback item. The duplicate feedback name should be provided as a new note such as &quot;DUP FB-00352&quot;.
By Design – The behavior is as designed.</description>
        <label>Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postponed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won&apos;t Fix</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>A reference number to an external bug/ticket/issue-tracking system.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter the ticket/issue number matching this feedback from your HelpDesk application.</inlineHelpText>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host__c</fullName>
        <description>Refering Host</description>
        <label>Host</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_url__c</fullName>
        <description>The URL of the page from which Feedback originated (more than 255)</description>
        <label>Long url</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Open_Days__c</fullName>
        <formula>nullvalue(Closed_Date__c, now()) -  Open_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Time__c</fullName>
        <description>Storing open time independent of SF&apos;s created time is necessary so feedback items may be exported and imported without losing that valuable information.</description>
        <label>Open Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Organization_ID__c</fullName>
        <description>The Salesforce Organization ID that uniquely identifies every SF organization instance.</description>
        <label>Organization ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <description>If available, the organization name.</description>
        <label>Organization Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Immediate items should be assigned and actively worked on, preempting all others as resources require.</description>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Low</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>Use the Product/Area field to categorize issues.  If your organization supports multiple products, or if a product as different kinds of uses, identify them here.</description>
        <inlineHelpText>Enter the product or category this issue relates to.</inlineHelpText>
        <label>Product/Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referer__c</fullName>
        <label>Referrer</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Functionally impaired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Workaround exists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Missing functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Cosmetic</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>New - All feedback items are set to new when they are created.
Assigned - When owner is changed from AquariusSupport the status is changed to assigned.
Working - The feedback item is being worked on.
Resolved - The feedback item has been resolved and it ready for testing.
Reopened - The item did not pass testing and is being assigned back to a developer.
Closed - The item passed testing and is ready to be deployed to production.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reopened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Comment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roll-up (Placeholder)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chore</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Agent__c</fullName>
        <label>User Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <label>User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>url__c</fullName>
        <description>The URL of the page from which Feedback originated.</description>
        <label>url</label>
        <type>Url</type>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>Assigned_To_Me</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Summary__c</columns>
        <columns>Open_Days__c</columns>
        <columns>Product_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Closed_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>AssignedToMe__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Assigned To Me</label>
    </listViews>
    <listViews>
        <fullName>Open</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Summary__c</columns>
        <columns>Open_Days__c</columns>
        <columns>Product_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Closed_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Open</label>
    </listViews>
    <listViews>
        <fullName>Unassigned</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Summary__c</columns>
        <columns>Open_Days__c</columns>
        <columns>Product_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Closed_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
        </filters>
        <label>Unassigned</label>
    </listViews>
    <nameField>
        <displayFormat>FB-{00000}</displayFormat>
        <label>Feedback ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Require_Disposition</fullName>
        <active>true</active>
        <errorConditionFormula>!isblank(Closed_Date__c) &amp;&amp; isblank( text(Close_Status__c ))</errorConditionFormula>
        <errorMessage>A disposition is required to set a close date.</errorMessage>
    </validationRules>
</CustomObject>